test/fail/M0173.mo
to_candid ([var 1]) : Blob
